feature(tokens): add token managment to create personal tokens
