# tokens/api.go
@@ -1,0 +1,150 @@
+//
+// Copyright 2024  Pantacor Ltd.
+//
+// Licensed under the Apache License, Version 2.0 (the "License");
+// you may not use this file except in compliance with the License.
+// You may obtain a copy of the License at
+//
+//   http://www.apache.org/licenses/LICENSE-2.0
+//
+//   Unless required by applicable law or agreed to in writing, software
+//   distributed under the License is distributed on an "AS IS" BASIS,
+//   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+//   See the License for the specific language governing permissions and
+//   limitations under the License.
+//
+
+// Package tokens provides the tokens managment infrastructure for pantahub.
+package tokens
+
+//
+import (
+	"log"
+	"os"
+
+	"github.com/ant0ine/go-json-rest/rest"
+	jwt "github.com/pantacor/go-json-rest-middleware-jwt"
+	"gitlab.com/pantacor/pantahub-base/accounts"
+	"gitlab.com/pantacor/pantahub-base/metrics"
+	"gitlab.com/pantacor/pantahub-base/tokens/tokenendpoints"
+	"gitlab.com/pantacor/pantahub-base/tokens/tokenrepo"
+	"gitlab.com/pantacor/pantahub-base/tokens/tokenservice"
+	"gitlab.com/pantacor/pantahub-base/utils"
+	"gitlab.com/pantacor/pantahub-base/utils/tracer"
+	"go.mongodb.org/mongo-driver/mongo"
+)
+
+// App logs rest application
+type App struct {
+	jwtMiddleware *jwt.JWTMiddleware
+	API           *rest.Api
+	mongoClient   *mongo.Client
+}
+
+var (
+	onlyUserFilter = []accounts.AccountType{
+		accounts.AccountTypeUser,
+	}
+	onlyUserMiddleware = []rest.Middleware{
+		utils.InitUserTypeFilterMiddleware(onlyUserFilter),
+	}
+)
+
+// New create a new tokens rest application
+func New(jwtMiddleware *jwt.JWTMiddleware, mongoClient *mongo.Client) *App {
+	app := new(App)
+	app.jwtMiddleware = jwtMiddleware
+	app.mongoClient = mongoClient
+
+	repo := tokenrepo.New(mongoClient)
+	endpoints := tokenendpoints.New(tokenservice.New(repo))
+	if err := repo.SetIndexes(); err != nil {
+		log.Fatal("can't create indexes to tokens app: ", err)
+		return nil
+	}
+
+	app.API = rest.NewApi()
+
+	// we dont use default stack because we dont want content type enforcement
+	app.API.Use(&rest.AccessLogJsonMiddleware{Logger: log.New(os.Stdout, "/tokens:", log.Lshortfile)})
+	app.API.Use(&utils.AccessLogFluentMiddleware{Prefix: "tokens"})
+
+	app.API.Use(&rest.StatusMiddleware{})
+	app.API.Use(&rest.TimerMiddleware{})
+	app.API.Use(&metrics.Middleware{})
+	app.API.Use(rest.DefaultCommonStack...)
+
+	// we allow calls from other domains to allow webapps; XXX: review
+	app.API.Use(&rest.CorsMiddleware{
+		RejectNonCorsRequests: false,
+		OriginValidator: func(origin string, request *rest.Request) bool {
+			return true
+		},
+		AllowedMethods: []string{"GET", "POST", "PUT", "DELETE", "OPTIONS"},
+		AllowedHeaders: []string{
+			"Accept",
+			"Content-Type",
+			"X-Custom-Header",
+			"Origin",
+			"Authorization",
+			"X-Trace-ID",
+			"Trace-Id",
+			"x-request-id",
+			"X-Request-ID",
+			"TraceID",
+			"ParentID",
+			"Uber-Trace-ID",
+			"uber-trace-id",
+			"traceparent",
+			"tracestate",
+		},
+		AccessControlAllowCredentials: true,
+		AccessControlMaxAge:           3600,
+	})
+
+	app.API.Use(&rest.IfMiddleware{
+		Condition: func(request *rest.Request) bool {
+			return true
+		},
+		IfTrue: app.jwtMiddleware,
+	})
+
+	app.API.Use(&rest.IfMiddleware{
+		Condition: func(request *rest.Request) bool {
+			return true
+		},
+		IfTrue: &utils.AuthMiddleware{},
+	})
+
+	apiRouter, _ := rest.MakeRouter(
+		rest.Get("/", endpoints.ListTokens),
+		rest.Post(
+			"/",
+			rest.WrapMiddlewares(
+				onlyUserMiddleware,
+				endpoints.CreateToken,
+			),
+		),
+		rest.Get(
+			"/#id",
+			rest.WrapMiddlewares(
+				onlyUserMiddleware,
+				endpoints.GetToken,
+			),
+		),
+		rest.Delete(
+			"/#id",
+			rest.WrapMiddlewares(
+				onlyUserMiddleware,
+				endpoints.DeleteToken,
+			),
+		),
+	)
+	app.API.Use(&tracer.OtelMiddleware{
+		ServiceName: os.Getenv("OTEL_SERVICE_NAME"),
+		Router:      apiRouter,
+	})
+	app.API.SetApp(apiRouter)
+
+	return app
+}
